# libsodium

./: .travis.yml  CMakeLists.txt  appveyor.yml
cmake/module/: libsodium_add_c_flag.cmake  libsodium_add_have_macro.cmake  libsodium_try_compile.cmake
cmake/try_compile/: amd64_asm.c  atomic_ops.c  avx2intrin.c  avx512fintrin.c  avx_asm.c  avxintrin.c  cpuid.c  emmintrin.c  limit_macros.c  memset.c  native_client.c  pmmintrin.c  rdrand.c  smmintrin.c  ti_mode.c  tmmintrin.c  weak_symbols.c  wmmintrin.c  xgetbv.c
src/libsodium/: sugar.cmake
src/libsodium/sodium/: runtime.c
test/default/: pwhash_scrypt.c  sugar.cmake
